Fix for socket v4 removed connection with connect

--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
         
         <script>
             //io is imported from the above script
-            let socket = io("http://localhost:8000");
+            var socket = io.connect('http://localhost:8000/');
             // console.log(socket)
 
-            socket.on("connection",(data)=>{
-        console.log(data)
-        socket.emit("message", {data:"welcome to socket io"})
-        socket.on("message", (msg)=>{
+            socket.on("connect",()=>{
+                console.log("connected");
+                socket.on("welcome", (msg)=>{
             console.log(msg)
         })
-            })
+        socket.emit("message", {data:"welcome to socket io"})
+            });
+
         </script>
